--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   validation:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: gradle/wrapper-validation-action@v1
 
   test:
     name: Run Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
         run: ./gradlew test
 
   checks:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -49,14 +49,14 @@ jobs:
       # Allow tests to continue on other devices if they fail on one device.
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [macos-latest]
         arch: [ x86_64 ]
         target: [ google_apis ]
         channel: [ stable ]
         api-level:
           - 29
         include:
-          - os: ubuntu-latest
+          - os: macos-latest
             api-level: 29
             target: google_apis
             arch: x86_64
