--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   validation:
+    name: Validate
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -31,6 +32,7 @@ jobs:
         run: ./gradlew test
 
   checks:
+    name: Check
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -43,6 +45,7 @@ jobs:
         run: ./gradlew build --stacktrace
 
   instrumentation-tests:
+    name: Instrumentation Tests ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     strategy:
@@ -54,10 +57,30 @@ jobs:
         target: [ google_apis ]
         channel: [ stable ]
         api-level:
+          - 27
+          - 28
           - 29
+          - 30
+          - 31
         include:
           - os: macos-latest
+            api-level: 27
+            target: google_apis
+            arch: x86_64
+          - os: macos-latest
+            api-level: 28
+            target: google_apis
+            arch: x86_64
+          - os: macos-latest
             api-level: 29
+            target: google_apis
+            arch: x86_64
+          - os: macos-latest
+            api-level: 30
+            target: google_apis
+            arch: x86_64
+          - os: macos-latest
+            api-level: 31
             target: google_apis
             arch: x86_64
     steps:
