--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,10 +63,10 @@ jobs:
           - 30
           - 31
         include:
-          - os: ubuntu-latest
+          - os: macos-latest
             api-level: 27
             target: google_apis
-            arch: x86_64
+            arch: x86
           - os: macos-latest
             api-level: 28
             target: google_apis
@@ -75,7 +75,7 @@ jobs:
             api-level: 29
             target: google_apis
             arch: x86_64
-          - os: ubuntu-latest
+          - os: macos-latest
             api-level: 30
             target: google_apis
             arch: x86_64
