--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,7 +52,7 @@ jobs:
       # Allow tests to continue on other devices if they fail on one device.
       fail-fast: false
       matrix:
-        os: [ macos-latest, ubuntu-latest ]
+        os: [ macos-latest ]
         arch: [ x86_64 ]
         target: [ google_apis ]
         channel: [ stable ]
@@ -63,10 +63,6 @@ jobs:
           - 30
           - 31
         include:
-          - os: macos-latest
-            api-level: 27
-            target: google_apis
-            arch: x86
           - os: macos-latest
             api-level: 28
             target: google_apis
