--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,40 +45,18 @@ jobs:
         run: ./gradlew build --stacktrace
 
   instrumentation-tests:
-    name: Instrumentation Tests ${{ matrix.os }}
+    name: Instrumentation Tests ${{ matrix.os }} ${{ matrix.api-level }} ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     strategy:
       # Allow tests to continue on other devices if they fail on one device.
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest ]
-        arch: [ x86 ]
+        os: [ macos-latest ]
+        arch: [ x86, x86_64 ]
         target: [ google_apis ]
         channel: [ stable ]
-        api-level:
-          - 27
-          - 28
-          - 29
-          - 30
-          - 31
-        include:
-          - os: macos-latest
-            api-level: 28
-            target: google_apis
-            arch: x86_64
-          - os: macos-latest
-            api-level: 29
-            target: google_apis
-            arch: x86_64
-          - os: macos-latest
-            api-level: 30
-            target: google_apis
-            arch: x86_64
-          - os: macos-latest
-            api-level: 31
-            target: google_apis
-            arch: x86_64
+        api-level: [ 27, 28, 29, 30, 31, 32 ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
