--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -57,6 +57,9 @@ jobs:
         target: [ google_apis ]
         channel: [ stable ]
         api-level: [ 27, 28, 29, 30 ]
+        exclude: # Exclude configurations that are not included in sdkmanager
+          - api-level: 27
+            arch: x86_64
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
