--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -60,6 +60,8 @@ jobs:
         exclude: # Exclude configurations that are not included in sdkmanager
           - api-level: 27
             arch: x86_64
+          - api-level: 30
+            arch: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
