--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,15 +53,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-latest ]
-        arch: [ x86, x86_64 ]
+        arch: [ x86_64 ]
         target: [ google_apis ]
         channel: [ stable ]
         api-level: [ 27, 28, 29, 30 ]
-        exclude: # Exclude configurations that are not included in sdkmanager
-          - api-level: 27
-            arch: x86_64
-          - api-level: 30
-            arch: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
