Changed CI configuration

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,15 +53,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-latest ]
-        arch: [ x86_64 ]
+        arch: [ x86, x86_64 ]
         target: [ google_apis ]
         channel: [ stable ]
-        api-level: [ 26, 27, 28, 29, 30, 31, 32 ]
+        api-level: [ 26, 27, 28, 29, 30, 32 ]
         exclude: # Exclude configurations that are not included in sdkmanager
           - api-level: 27
             arch: x86_64
-          - api-level: 31
-            arch: x86
           - api-level: 32
             arch: x86
     steps:
