--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,45 +1,49 @@
 [versions]
 agp = "8.3.0"
-converterGson = "2.9.0"
-gson = "2.10.1"
-gsonVersion = "2.8.7"
-hiltAndroidCompiler = "2.28-alpha"
-hilt = "2.28-alpha"
-hiltVersion = "2.48"
-junitJupiter = "5.8.1"
-kotlin = "1.9.0"
+compiler = "4.16.0"
+compose = "1.0.0-beta01"
+glide = "4.16.0"
+hiltAndroidCompiler = "2.51"
+hilt = "2.51"
+junitJupiter = "5.10.2"
+kotlin = "1.9.22"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 ktlint = "12.1.0"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.7.0"
-composeBom = "2023.08.00"
-moshiKotlinCodegen = "1.14.0"
-moshiVersion = "1.15.0"
-retrofit = "2.9.0"
+lifecycleRuntimeKtx = "2.7.0"
+activityCompose = "1.8.2"
+composeBom = "2024.02.02"
+moshiKotlinCodegen = "1.15.1"
+moshiVersion = "1.15.1"
+okhttp = "4.12.0"
+retrofit = "2.10.0"
 appcompat = "1.6.1"
 material = "1.11.0"
 playServicesLocation = "21.2.0"
-retrofitVersion = "2.9.0"
+retrofitVersion = "2.10.0"
 lifecycleViewmodelCompose = "2.7.0"
 navigationCompose = "2.7.7"
-uiGraphicsAndroid = "1.6.3"
-uiAndroid = "1.6.3"
-animationCoreAndroid = "1.6.3"
-foundationAndroid = "1.6.3"
+uiGraphicsAndroid = "1.6.4"
+uiAndroid = "1.6.4"
+animationCoreAndroid = "1.6.4"
+foundationAndroid = "1.6.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
+compose = { module = "com.github.bumptech.glide:compose", version.ref = "compose" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofitVersion" }
-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
-gson-v287 = { module = "com.google.code.gson:gson", version.ref = "gsonVersion" }
+dagger-android-processor = { module = "com.google.dagger:dagger-android-processor", version.ref = "hilt" }
+dagger-android-support = { module = "com.google.dagger:dagger-android-support", version.ref = "hilt" }
+dagger-android = { module = "com.google.dagger:dagger-android", version.ref = "hilt" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 hilt = { module = "com.google.dagger:hilt", version.ref = "hilt" }
-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltVersion" }
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-android-compiler-v228alpha = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
+hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hiltAndroidCompiler" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -59,6 +63,7 @@ moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", ver
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiVersion" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshiVersion" }
 moshi-kotlin-codegen-v1140 = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
