--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -56,12 +56,10 @@ jobs:
         arch: [ x86, x86_64 ]
         target: [ google_apis ]
         channel: [ stable ]
-        api-level: [ 26, 27, 28, 29, 30, 32 ]
+        api-level: [ 26, 27, 28, 29, 30 ]
         exclude: # Exclude configurations that are not included in sdkmanager
           - api-level: 27
             arch: x86_64
-          - api-level: 32
-            arch: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
