--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ compose = "1.0.0-beta01"
 glide = "4.16.0"
 hiltAndroidCompiler = "2.51"
 hilt = "2.51"
+hiltNavigationCompose = "1.2.0"
 junitJupiter = "5.10.2"
 kotlin = "1.9.22"
 coreKtx = "1.12.0"
@@ -32,6 +33,7 @@ foundationAndroid = "1.6.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
 compose = { module = "com.github.bumptech.glide:compose", version.ref = "compose" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofitVersion" }
